# mcp-winmedio

./: .env  .gitignore  Containerfile  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
src/: __init__.py  server.py  winmedio_client.py
src/mcp_winmedio/: server.py  winmedio_client.py
tests/: test_winmedio_client.py
