[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-winmedio"
version = "0.1.0"
description = "MCP Server to retrieve winmedio library data (rents, due dates, reservations)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
mcp-winmedio = "mcp_winmedio.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_winmedio"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
