[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-winmedio"
version = "0.1.0"
description = "MCP Server to retrieve winmedio library data (rents, due dates, reservations)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.5.0",
    "httpx>=0.27.0",
]

